--- a/elk-csv/logstash/logstash.conf
+++ b/elk-csv/logstash/logstash.conf
@@ -1,4 +1,31 @@
 input {
+  file {
+    path => "/usr/share/logstash/external-data/data.csv"
+    start_position => "beginning"
+    sincedb_path => "/dev/null"
+  }
+}
+
+filter {
+  csv {
+    separator => ","
+    columns => ["order_id", "order_date", "customer_name", "product_name", "quantity", "price"]
+  }
+
+  date {
+    match => ["order_date", "yyyy-MM-dd"]
+    target => "order_date"
+  }
+}
+
+output {
+  elasticsearch {
+    hosts => ["elasticsearch:9200"]
+    index => "orders-%{+YYYY.MM.dd}"
+  }
+}
+
+input {
         file {
                 start_position => "beginning"
                 path => "/usr/share/logstash/external-data/data.csv"
@@ -36,4 +63,33 @@ output {
     index => "csv-data"
    }
    stdout{}
+}
+
+input {
+  file {
+    path => "/data/apache_logs.txt"
+    start_position => "beginning"
+    sincedb_path => "/dev/null"
+  }
+}
+
+filter {
+  grok {
+    match => { "message" => "%{COMBINEDAPACHELOG}" }
+  }
+  date {
+    match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
+    target => "@timestamp"
+    remove_field => "timestamp"
+  }
+  geoip {
+    source => "clientip"
+  }
+}
+
+output {
+  elasticsearch {
+    hosts => ["elasticsearch:9200"]
+    index => "web_server_logs"
+  }
 }
